# journal

./: .gitignore  README.md  cache.json  pyproject.toml
.github/workflows/: refresh.yml
docs/superpowers/plans/: 2026-05-06-sg-journal-status-tracker.md
docs/superpowers/specs/: 2026-05-06-sg-journal-status-design.md
src/journal/: __main__.py  cache.py  client.py  dedup.py  report.py  serialize.py  window.py
src/journal/static/: app.js  index.html  style.css
tests/: test_cache.py  test_client.py  test_dedup.py  test_main.py  test_report.py  test_serialize.py  test_window.py
tests/fixtures/: entry-page-158567.html  search-page-empty.html  search-page-jet.html
