[project]
name = "journal"
version = "0.1.0"
description = "RichestLife journal submission status tracker"
readme = "README.md"
authors = [{ name = "Jet Kan", email = "jetkan.yk@gmail.com" }]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.10,<0.12.0"]
build-backend = "uv_build"
